--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,46 @@
+* {
+  box-sizing: border-box;
+  color: #2c2c2c;
+}
 body {
   background-color: beige;
+  margin: 0px;
 }
 h1 {
-  margin-top: 150px;
+  padding-top: 150px;
+  margin: 0px;
   font-size: 80px;
   text-align: center;
 }
 h2 {
+  padding: 2rem 0rem;
+  margin: 0px;
   font-size: 80px;
 }
+p {
+  font-size: 1.3rem;
+}
 nav {
+  height: 50px;
   padding: 0 10% 0 10%;
   display: flex;
   justify-content: space-around;
 }
+.sticky {
+  background-color: beige;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 nav a {
+  color: #24a586;
   display: inline-flex;
   font-size: 18px;
   text-decoration: none;
+  align-items: center;
+}
+nav a:visited {
+  color: #24a586;
 }
 .link-center-home {
   text-decoration: none;
@@ -29,48 +52,62 @@ nav a {
 }
 .about-div {
   display: flex;
-  align-items: center;
-  margin: 0% 10%;
+  gap: 2rem;
 }
-mark {
-  background-color: black;
-  color: white;
+.about-text {
+  /*flex-grow: 2;*/
 }
 .img-about_me {
   border-radius: 50%;
-  width: 300px;
+  flex-grow: 2;
+  width: 40%;
 }
+mark {
+  background-color: #2c2c2c;
+  color: white;
+  padding: 0rem 1rem;
+}
+
 li {
   list-style-type: none;
 }
+.social-media-list {
+  display: flex;
+  justify-content: space-evenly;
+}
 .social {
-  display: inline-block;
   text-align: center;
   height: 100px;
   width: 100px;
   border-radius: 50%;
   background-color: #24a586;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-.social-media-list {
-  display: inline;
+.social :hover {
+  background-color: #19745e;
 }
+
 section {
-  height: 100%;
-  margin: 0% 10%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0px;
+  padding: 5rem 10%;
+  align-content: space-between;
 }
 
 form {
   display: flex;
-  flex-wrap: wrap;
-  padding: 20px 50px;
+  flex-direction: column;
+  padding: 2rem;
   border-radius: 5px;
-  height: 200px;
+
   background-color: #f0f0f0;
 }
 input {
   height: 40px;
-  width: 200px;
-  border-width: 0px;
   border: none;
   border-radius: 5px;
   margin: 5px;
@@ -79,7 +116,6 @@ input {
 textarea {
   border-radius: 5px;
   resize: none;
-  width: 90%;
   margin: 5px;
   border-width: 0px;
   border: none;
@@ -97,11 +133,14 @@ textarea {
   border-width: 0px;
   border: none;
   height: 40px;
-  width: 200px;
   background-color: #7c7c7c;
   float: right;
 }
 footer {
+  align-items: center;
+  display: flex;
+  background-color: #24a586;
+  height: 50px;
   display: flex;
   justify-content: space-around;
 }
