--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
   color: #2c2c2c;
+  font-family: "Open Sans", sans-serif;
+}
+a {
+  text-decoration: none;
 }
 body {
   background-color: beige;
@@ -36,31 +40,35 @@ nav a {
   color: #24a586;
   display: inline-flex;
   font-size: 18px;
-  text-decoration: none;
   align-items: center;
 }
 nav a:visited {
   color: #24a586;
 }
+.frase-home {
+  font-style: italic;
+  font-size: 2rem;
+  text-align: center;
+  margin: 4rem 1rem;
+}
 .link-center-home {
-  text-decoration: none;
-  margin-top: 400px;
   display: grid;
   justify-content: space-around;
   color: #24a586;
   font-size: 20px;
+  margin-top: 12rem;
 }
 .about-div {
+  padding: 2rem;
+  gap: 1rem;
   display: flex;
-  gap: 2rem;
+  flex-direction: column;
 }
-.about-text {
-  /*flex-grow: 2;*/
-}
+
 .img-about_me {
   border-radius: 50%;
-  flex-grow: 2;
-  width: 40%;
+  width: 300px;
+  place-self: center;
 }
 mark {
   background-color: #2c2c2c;
@@ -90,14 +98,15 @@ li {
 }
 
 section {
-  display: flex;
-  flex-direction: column;
   height: 100vh;
   margin: 0px;
   padding: 5rem 10%;
   align-content: space-between;
 }
 
+#portfolio {
+  height: auto;
+}
 form {
   display: flex;
   flex-direction: column;
@@ -143,4 +152,18 @@ footer {
   height: 50px;
   display: flex;
   justify-content: space-around;
+  color: white;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  nav a {
+    font-size: 1.2rem;
+  }
+  h1 {
+    font-size: 3.5rem;
+  }
+  section {
+    padding: 0;
+  }
 }
