--- a/styles.css
+++ b/styles.css
@@ -115,14 +115,18 @@ section {
 #portfolio ul {
   margin: 0;
   padding: 0;
-  display: inline-flex;
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
   gap: 5px;
+  min-height: 200px;
+  width: 100%;
 }
 #portfolio ul li {
   border: 1px solid black;
   padding: 20px;
   border-radius: 10px;
-  min-width: 300px;
+  width: 300px;
 }
 #portfolio ul li h3 {
   margin: -30px 0px 30px 0px;
@@ -180,9 +184,34 @@ footer {
 .menu-mobile {
   display: none;
 }
+#toggle-menu-mobile {
+  display: block;
+  width: 100px;
+  height: 100px;
+}
+#menu-gran {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.hidden {
+  display: none !important;
+}
+#menu-gran a {
+  height: 50px;
+}
+.content-contact {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 2em;
+}
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 601px) {
   /* For mobile phones: */
+  body {
+    background-color: cornflowerblue;
+  }
   nav a {
     font-size: 1.2rem;
   }
