--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ li {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  font-weight: bold;
 }
 .social :hover {
   background-color: #19745e;
@@ -238,15 +239,26 @@ footer {
     background-color: cornflowerblue;
   }
   nav a {
-    font-size: 1.2rem;
+    font-size: 1.2em;
   }
   h1 {
-    font-size: 3.5rem;
+    font-size: 3.5em;
+  }
+  h2 {
+    font-size: 2.9em;
+  }
+  h3 {
+    font-size: 1.8em;
+  }
+  #portfolio ul li mark {
+    padding: 10px;
   }
   section {
     padding: 0em 0.4em;
   }
-
+  form {
+    padding: 2em 0.8em;
+  }
   .menu-mobile {
     display: block;
   }
@@ -256,4 +268,20 @@ footer {
   .about-div {
     padding: 0;
   }
+  input,
+  textarea {
+    font-size: 1.2em;
+  }
+  .social-media-list {
+    flex-wrap: wrap;
+  }
+  .social-media-list a {
+    margin-bottom: 10px;
+  }
+  .content-contact {
+    flex-direction: column;
+  }
+  .social {
+    width: 80px;
+    height: 80px;
 }
