--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,9 @@ h1 span.lletra-girada-dreta {
   display: inline-block;
   transform: rotateZ(10deg);
 }
+h4 {
+  font-size: 1.4em;
+}
 h2 {
   padding: 2rem 0rem;
   margin: 0px;
@@ -40,6 +43,11 @@ h2 {
 h3,
 h4 {
   margin: 5px 0px;
+}
+#about_me h2 {
+  margin-bottom: -65px;
+  z-index: 1;
+  text-align: center;
 }
 #home {
   padding: 0px;
@@ -55,10 +63,11 @@ p {
 }
 .svg-baix {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   width: 100%;
   z-index: -1;
 }
+
 /***************************************
  MENU 
 */
@@ -78,6 +87,7 @@ p {
 }
 .sticky {
   flex-direction: row-reverse;
+  z-index: 1;
   /*position: fixed;*/
   top: 0;
   width: 100%;
@@ -90,9 +100,36 @@ p {
   width: 75px;
   font-size: 1.8em;
   line-height: 0.9em;
+  cursor: pointer;
 }
 
 /***************************************/
+@keyframes animacio-pilota {
+  to {
+    transform: translateY(0px) scaleY(90%) scaleX(100%);
+  }
+  from {
+    transform: translateY(-50px) scaleY(100%) scaleX(90%);
+  }
+}
+.pilota-animada {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 200px auto 0 auto;
+  background-color: #24a586;
+  animation-name: animacio-pilota;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in;
+  animation-delay: 0;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-fill-mode: both;
+  animation-play-state: running;
+}
+.pilota-animada:hover {
+  background-color: #2c2c2c;
+}
 .frase-home {
   font-style: italic;
   font-size: 2rem;
@@ -100,11 +137,11 @@ p {
   margin: 4rem 1rem;
 }
 .link-center-home {
+  padding: 10px;
   display: grid;
   justify-content: space-around;
   color: #24a586;
   font-size: 20px;
-  margin-top: 12em;
 }
 .about-div {
   gap: 1rem;
@@ -113,7 +150,7 @@ p {
   align-items: center;
 }
 .about-div p {
-  padding: 1em;
+  padding: 3em;
   max-width: 500px;
 }
 .about-div p::first-letter {
@@ -132,6 +169,24 @@ p {
   width: 300px;
   place-self: center;
 }
+.img-wrapper {
+  z-index: -2;
+  background-color: rgb(255, 255, 255, 0.7);
+  border-radius: 50%;
+  height: 300px;
+  width: 300px;
+  margin-top: -315px;
+}
+#portfolio p {
+  margin: 10px 0 5px 0;
+}
+.portfolio-tag {
+  font-size: 12px;
+  background-color: #18745e;
+  padding: 2px 8px;
+  margin: 10px 20px 10x 10px;
+  border-radius: 10px;
+}
 
 li {
   list-style-type: none;
@@ -141,6 +196,7 @@ li {
   gap: 1em;
   justify-content: space-evenly;
   padding: 0;
+  flex-wrap: wrap;
 }
 .social span,
 .social i:hover {
@@ -149,6 +205,15 @@ li {
 .social-media-list a {
   flex: 1;
 }
+
+.social.tarjeta {
+  background-color: #18745e;
+  color: black;
+}
+.social.tarjeta > * {
+  color: black;
+}
+
 .social {
   text-align: center;
   height: 100px;
@@ -166,6 +231,9 @@ li {
 }
 .detall-compte-social {
   font-size: 0.8em;
+}
+.detall-compte-social:hover {
+  background-color: none;
 }
 section {
   position: relative;
@@ -201,9 +269,14 @@ section {
   width: 100%;
 }
 .tarjeta {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.5);
   padding: 20px;
   border-radius: 10px;
+  transition: all 500ms ease-in-out;
+}
+.tarjeta:hover {
+  background-color: white;
+  box-shadow: -4px -4px rgba(0, 0, 0, 0.7);
 }
 .sombra {
   box-shadow: 4px 4px rgba(0, 0, 0, 0.7);
@@ -220,10 +293,11 @@ form {
   flex-direction: column;
   padding: 2rem;
   border-radius: 5px;
-
+  min-width: 400px;
   background-color: #f0f0f0;
 }
 input {
+  padding: 0 15px;
   height: 40px;
   border: none;
   border-radius: 5px;
@@ -231,6 +305,7 @@ input {
   font-family: system-ui;
 }
 textarea {
+  padding: 15px;
   border-radius: 5px;
   resize: none;
   margin: 5px;
@@ -245,6 +320,8 @@ textarea {
   border-radius: 20px;
 }
 .form-button {
+  font-weight: bold;
+  cursor: pointer;
   margin: 5px;
   border-radius: 5px;
   border-width: 0px;
@@ -252,6 +329,10 @@ textarea {
   height: 40px;
   background-color: #7c7c7c;
   float: right;
+  transition: all 500ms ease-in-out;
+}
+.form-button:hover {
+  background-color: #24a586;
 }
 footer {
   align-items: center;
@@ -301,6 +382,7 @@ footer p {
   }
   .about-div p {
     max-width: 350px;
+    padding: 1.6em;
   }
   #portfolio ul li {
     min-width: 220px;
@@ -312,6 +394,7 @@ footer p {
     padding: 0;
   }
   form {
+    min-width: 0;
     padding: 2em 0.8em;
   }
 
@@ -323,12 +406,17 @@ footer p {
   .img-about_me {
     width: 180px;
   }
+  #about_me h2 {
+    margin-bottom: -30px;
+  }
+  .img-wrapper {
+    width: 180px;
+    height: 180px;
+    margin-top: -180px;
+  }
   input,
   textarea {
     font-size: 1.2em;
-  }
-  .social-media-list {
-    flex-wrap: wrap;
   }
   .social-media-list a {
     margin-bottom: 10px;
@@ -352,9 +440,6 @@ footer p {
   }
   .menu-hidden {
     display: none;
-  }
-  .link-center-home {
-    margin-top: 4em;
   }
   footer {
     font-size: 0.8em;
